--- a/src/styles.css
+++ b/src/styles.css
@@ -160,7 +160,6 @@ textarea {
 }
 
 fieldset {
-    grid-column: 1 / -1;
     border: none;
     display: flex;
     justify-content: center;
@@ -168,11 +167,16 @@ fieldset {
 }
 
 fieldset>label {
-    
-    font-size: 1.5rem;
+    cursor: pointer;
+    font-size: 1rem;
     border-radius: 5px;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
     margin: 0 2rem;
+}
+
+#label-priority {
+    display: flex;
+    align-items: center;
 }
 
 fieldset>#label-low {
@@ -209,4 +213,27 @@ input[type='radio'][name="priority"]:checked + #label-medium {
 input[type='radio'][name="priority"]:checked + #label-high {
     background-color: red;
     color: white; 
+}
+
+.form-buttons {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    grid-column: 1 / -1;
+}
+
+.form-buttons>button {
+    font-size: 1.5rem;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    margin: 0 2rem;
+    background-color: var(--grey);
+    border: 2px solid var(--blue);
+    color: var(--blue)
+}
+
+.form-buttons>button:hover {
+    background-color: var(--blue);
+    color: var(--grey);
+    cursor: pointer;
 }
